# obs-profanity-filter

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Make-Installer.ps1  README.md  buildspec.json
.github/scripts/: Build-Windows.ps1
cmake/common/: buildnumber.cmake  buildspec_common.cmake  osconfig.cmake
data/: builtin_dirty_words.txt  models.json  runtime.json
installer/: installer.iss.in
src/: README.md  asr-model.cpp  asr-model.hpp  file-downloader.cpp  file-downloader.hpp  logging-macros.hpp  model-manager.cpp  model-manager.hpp  plugin-config.cpp  plugin-config.hpp  plugin-main.cpp  profanity-filter.cpp  profanity-filter.hpp  runtime-manager.cpp  runtime-manager.hpp  utils.cpp  utils.hpp  video-delay.cpp  video-delay.hpp
